# kicad_verilog

./: Cargo.toml
src/: config.rs  lib.rs  main.rs
test-data/: alu.net  alu.vcfg  memory.net  memory.vcfg  register-bank.net
tests/: cli.rs
tests/data/: alu.net  alu.vcfg  common.vcfg  memory.net  memory.vcfg  pc.net  pc.vcfg  register-bank.net  register-bank.vcfg  simple.net  simple.v  simple.vcfg  simple_tb.v
tests/util/: mod.rs
