[package]
name = "kicad_verilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
kicad_netlist = { path = "../kicad_netlist" }
clap = "4.4.18"
regex = "1.10.3"
once_cell = "1.19.0"
nom = "7.1.3"
