[package]
name = "kicad_verilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
kicad_netlist = { path = "../kicad_netlist" }
regex = "1.10.3"
once_cell = "1.19.0"

[dev-dependencies]
assert_cmd = { version = "2.0.14", features = ["color"] }
test-with = { version = "0.12.6", default-features = false, features = [
    "executable",
] }
rand = "0.8.5"
